argo-rollouts/filter-deployement.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-auth
  namespace: ambassador
spec:
  type: ClusterIP
  selector:
    app: example-auth
  ports:
    - port: 3000
      name: http-example-auth
      targetPort: http-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-auth
  namespace: ambassador
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: example-auth
  template:
    metadata:
      labels:
        app: example-auth
    spec:
      containers:
        - name: example-auth
          image: docker.io/datawire/ambassador-auth-service:2.0.0
          imagePullPolicy: Always
          ports:
            - name: http-api
              containerPort: 3000
          resources:
            limits:
              cpu: "0.1"
              memory: 100Mi
