argo-rollouts/filter-policy.yaml
---


apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-example"
  #namespace: foo
spec:
  selector:
    matchLabels:
      app: client
  jwtRules:
    - issuer: "testing@secure.istio.io"
      jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.17/security/tools/jwt/samples/jwks.json"

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  #namespace: foo
spec:
  selector:
    matchLabels:
      app: client
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["testing@secure.istio.io/testing@secure.istio.io"]

---

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  #namespace: ns1
  name: anyname
spec:
  selector:
    matchLabels:
      app: client
  action: DENY
  rules:
    - to:
        - operation:
            methods: ["GET"]
            paths: ["/*"]
      when:
        - key: request.headers[test]
          #values: ["blabla"]
          notValues: ["blabla"]
